--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
     <script type="text/javascript" src="sha256.js"></script>
   </head>
   <body>
+    <object data="test2.pdf#page=2" type="application/pdf" width="100%" height="100%">
+      <iframe src="test2.pdf#page=2" width="100%" height="100%">
+        <p><b>表示されない時の表示</b>: <a href="test2.pdf">PDF をダウンロード</a>.</p>
+      </iframe>
+    </object>
+    <object data="test2pass2.pdf#page=2" type="application/pdf" width="100%" height="100%">
+      <iframe src="test2pass2.pdf#page=2" width="100%" height="100%">
+        <p><b>表示されない時の表示</b>: <a href="test2pass2.pdf">PDF をダウンロード</a>.</p>
+      </iframe>
+    </object>
     <form id="form">
       <p id="message">Please enter your password.</p>
       <input type="password" placeholder="password" id="password">
